--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   image_picker : ^0.6.3+1
   http: ^0.12.0+4
   mime: ^0.9.6+3
+  #flutter_facebook_login: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
