--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   http: ^0.12.0+4
   mime: ^0.9.6+3
   flutter_facebook_login: ^3.0.0
+  location: ^2.5.1
 
 
   # The following adds the Cupertino Icons font to your application.
