--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   mime: ^0.9.6+3
   flutter_facebook_login: ^3.0.0
   location: ^2.5.1
+  provider: ^4.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
