--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   location: ^2.5.1
   provider: ^4.0.4
-
+  cached_network_image: ^2.2.0
+  flutter_time_picker_spinner: ^1.0.6
+  align_positioned: ^1.2.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
